--- a/www/templates/scenarios.html
+++ b/www/templates/scenarios.html
@@ -1,7 +1,7 @@
 <ion-view title="{{battle.title}} - Scenarios" class="bubble-background">
   <ion-content>
     <ion-list class="responsive-sm">
-      <ion-item ng-repeat="scenario in battle.scenarios" href="#/app/scenario/{{scenario.id}}">
+      <ion-item ng-repeat="scenario in battle.scenarios" href="#/app/scenario/{{scenario.id}}/turn">
 	  	<div class="row">
 		  	<div class="col col-50">{{scenario.title}}</div>
 		  	<div class="col"><small>{{scenario.startDateTime | date:'MMM d, y h:mm a'}}</small></div>
