--- a/www/templates/scenario.html
+++ b/www/templates/scenario.html
@@ -1,26 +1,26 @@
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
-  <ion-tab title="Turn" icon-off="ion-clock" icon-on="ion-clock" href="#/app/scenario/{{scenario.id}}/turn">
+  <ion-tab title="Turn" icon-off="ion-ios-clock-outline" icon-on="ion-ios-clock" href="#/app/scenario/{{scenario.id}}/turn">
     <ion-nav-view name="scenario-turn"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="Orders" icon-off="ion-clipboard" icon-on="ion-clipboard" href="#/app/scenario/{{scenario.id}}/orders">
+  <ion-tab title="Orders" icon-off="ion-ios-list-outline" icon-on="ion-ios-list" href="#/app/scenario/{{scenario.id}}/orders">
     <ion-nav-view name="scenario-orders"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="Roster" icon-off="ion-person-stalker" icon-on="ion-person-stalker" href="#/app/scenario/{{scenario.id}}/roster">
+  <ion-tab title="Roster" icon-off="ion-ios-people-outline" icon-on="ion-ios-people" href="#/app/scenario/{{scenario.id}}/roster">
     <ion-nav-view name="scenario-roster"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="Fire" icon-off="ion-bonfire" icon-on="ion-bonfire" href="#/app/scenario/{{scenario.id}}/fire">
+  <ion-tab title="Fire" icon-off="ion-ios-flame-outline" icon-on="ion-ios-flame" href="#/app/scenario/{{scenario.id}}/fire">
     <ion-nav-view name="scenario-fire"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="Melee" icon-off="ion-load-b" icon-on="ion-load-b" href="#/app/scenario/{{scenario.id}}/melee">
+  <ion-tab title="Melee" icon-off="ion-ios-medical-outline" icon-on="ion-ios-medical" href="#/app/scenario/{{scenario.id}}/melee">
     <ion-nav-view name="scenario-melee"></ion-nav-view>
   </ion-tab>
   
-  <ion-tab title="Morale" icon-off="ion-beer" icon-on="ion-beer" href="#/app/scenario/{{scenario.id}}/morale">
+  <ion-tab title="Morale" icon-off="ion-ios-pint-outline" icon-on="ion-ios-pint" href="#/app/scenario/{{scenario.id}}/morale">
     <ion-nav-view name="scenario-morale"></ion-nav-view>
   </ion-tab>
   
