refactor js; order detail presentation

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -10,4 +10,10 @@
 
 .army-image {
     height: 27px;
+    vertical-align: middle;
+}
+
+.order-image {
+    height: 27px;
+    vertical-align: middle;
 }
