add/update orders

--- a/www/templates/scenario-tab-orders-order.html
+++ b/www/templates/scenario-tab-orders-order.html
@@ -24,7 +24,7 @@
             </label>
 			<label class="item item-input">
 				<span class="input-label">Arrival</span>
-				<input class="text-right" ng-model="order.dateTime" type="time">
+				<input class="text-right" ng-model="order.dateTime" type="time" step="900">
             </label>
 			<label class="item item-input item-select">
 				<span class="input-label">Type</span>
