--- a/www/templates/scenario-tab-turn.html
+++ b/www/templates/scenario-tab-turn.html
@@ -1,6 +1,6 @@
 <ion-view view-title="{{scenario.battle.title}} - {{scenario.title}}" class="bubble-background">
 	<ion-nav-buttons side="right">
-      <button class="button ion-android-refresh" ng-click="reset()">
+      <button class="button button-large icon ion-android-refresh" ng-click="reset()">
       </button>
    </ion-nav-buttons>
 	<ion-content padding="true">
