--- a/www/templates/scenario-tab-orders-order.html
+++ b/www/templates/scenario-tab-orders-order.html
@@ -3,7 +3,7 @@
 		<div class="title">
 			<img class="order-image" src="img/{{order.country}}.png"/> 
 		</div>
-		<button class="button button-balanced button-large" ng-click="accept()">Ok</button>
+		<button class="button button-balanced button-large" ng-click="ok()">Ok</button>
 		<button class="button button-assertive button-large button-primary" ng-click="cancel()">Cancel</button>
 	</ion-header-bar>
 	<ion-content class="padding">
