--- a/www/templates/roster-corps.html
+++ b/www/templates/roster-corps.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-25" ng-click="toggleCorps(corps)">
-		<i class="icon" ng-class="isCorpsShown(corps) ? 'ion-minus' : 'ion-plus'"></i>
+		<i class="icon" ng-class="isCorpsShown(corps) ? 'ion-arrow-down-b' : 'ion-arrow-right-b'"></i>
 		<img class="army-image" src="img/{{country}}-corps.png" />
 		<b>{{corps.name}}</b>
 		<i>{{corps.commander}}</i>
