--- a/www/templates/roster-army.html
+++ b/www/templates/roster-army.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-25" ng-click="toggleArmy(army)">
-		<i class="icon" ng-class="isArmyShown(army) ? 'ion-minus' : 'ion-plus'"></i>
+		<i class="icon" ng-class="isArmyShown(army) ? 'ion-arrow-down-b' : 'ion-arrow-right-b'"></i>
 		<img class="army-image" src="img/{{army.country}}.png" />
 		<b>{{army.name}}</b>
 		<i>{{army.commander}}</i>
